<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- LinearLayout because there is no need of complex positioning. Everything is one above the other -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_32"
        android:orientation="vertical">

    <TextView
        android:id="@+id/instructions_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/instructions_1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructions_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/instructions_2" />

    <Button
        android:id="@+id/instructions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_shoes"/>

</LinearLayout>

</layout>